ghc-4335c07/testsuite/tests/parser/should_fail/readFail046.hs
{-# LANGUAGE ExistientialQuantification #-}
-- tests for mis-spelled LANGUAGE pragma error message

module ShouldFail where
